--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en-us">
 
 <head>
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="D7460N" />
-  <meta name="description" content="Modern CSS, Intrinic design, front-end template" />
+  <meta name="description" content="Modern CSS, Intrinic design, Micro-frontend, HTML/CSS template" />
   <meta name="robots" content="index, archive" />
   <link rel="shortcut icon" type="image/svg+xml" sizes="any" href="data:image/svg+xml;utf8,<svg 
     xmlns='http://www.w3.org/2000/svg' 
@@ -48,7 +48,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: clamp(2rem, 5vw, 4rem);
+      font-size: clamp(1rem, 4vw, 3rem);
       overflow: hidden;
     }
 
@@ -56,6 +56,7 @@
     p {
       transition: color 250ms;
       line-height: 1rem;
+      text-wrap: balance;
     }
 
     h1:hover,
